Fix product grid overflow issue

--- a/source/stylesheets/products.sass
+++ b/source/stylesheets/products.sass
@@ -74,7 +74,8 @@
   padding: 16px 0
   font-size: 1.1em
   position: relative
-  display: grid
+  display: flex
+  flex-direction: column
   gap: 4px
   text-align: center
 
